# rethinkdb-rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  Rakefile  _config.yml  appveyor.yml  build.rs  default.nix  index.html  rustfmt.toml  update-docs.sh
.github/: FUNDING.yml
0-about-rethinkdb/: architecture.md  faq.md  faq.md.orig  limitations.md  rethinkdb-vs-mongodb.md  stability.md  technical-comparison-tables.md
0-getting-started/: build.md
0-getting-started/drivers/: index.md  java.md  python.md
0-getting-started/install/: arch.md  centos.md  debian.md  fedora.md  index.md  mint.md  osx.md  raspbian.md  ubuntu.md  windows.md
1-get-started/: build.md  cli-options.md  importing.md  improving-driver-performance.md  quickstart.md  reql-data-exploration.md  start-a-cluster.md  start-a-server.md
1-get-started/drivers/: driver_protocol.md  index.md  javascript.md  performance.md  python.md  ruby.md  writing-drivers.md
1-get-started/guide/: index.md  javascript.md  python.md  ruby.md
1-get-started/install/: arch.md  centos.md  debian.md  fedora.md  gentoo.md  index.md  mint.md  opensuse.md  osx.md  raspbian.md  ubuntu.md
1-reql-language/: asynchronous.md  data-types.md  external-api-access.md  map-reduce-in-rethinkdb.md
1-reql-language/changefeeds/: java.md  javascript.md  python.md  ruby.md
1-reql-language/dates-and-times/: java.md  python.md
1-reql-language/geo-support/: java.md  python.md  ruby.md
1-reql-language/guide/: index.md  java.md  javascript.md  python.md  ruby.md
1-reql-language/nested-fields/: java.md  javascript.md  python.md  ruby.md
1-reql-language/secondary-indexes/: java.md  javascript.md  python.md  (+1 more)
2-data-model/: data-modeling-in-rethinkdb.md
2-query-language/: asynchronous.md  changefeeds.md  data-types.md  date-time-support.md  error-types.md  external-api-access.md  from-sql.md  geospatial-support.md  introduction-to-reql.md  map-reduce-in-rethinkdb.md  secondary-indexes.md  table-joins.md
3-cluster-administration/: administration-tools.md  failover.md  migration.md  sharding-and-replication.md  system-issues.md  system-jobs.md  system-stats.md  system-tables.md
3-learn-the-tools/: administration-tools.md  consistency.md  failover.md  migration.md  sharding-and-replication.md  system-issues.md  system-jobs.md  system-tables.md
3-reql-practice/: examples.md  optimization.md  parallelization.md  reql-data-exploration.md
4-admin/: administration-tools.md  failover.md  importing.md  migration.md  permissions-and-accounts.md  sharding-and-replication.md  system-issues.md  system-jobs.md  system-stats.md  system-tables.md  third-party-admin-tools.md
4-rethinkdb-in-practice/: crashes.md  data-modeling-in-rethinkdb.md  elasticsearch.md  examples.md  frameworks-and-libraries.md  memory-usage.md  nested-fields.md  nobrainer.md  nodejs.md  rails.md  reql-data-exploration.md  troubleshooting.md
5-deploying-rethinkdb/: aws.md  backup.md  cluster-on-startup.md  config-file.md  memory-usage.md  paas.md  security.md  start-on-startup.md
5-deployment/: backup.md  cli-options.md  config-file.md  deployment-tools-BBEditPreviewTemp.md.html  deployment-tools.md  paas.md  security.md  start-on-startup.md
6-troubleshooting/: memory-usage.md  troubleshooting.md
7-developing/: elasticsearch.md  frameworks-and-libraries.md  nodejs.md  rails.md  writing-drivers.md
8-architecture/: 2-1-5-performance-report.md  architecture.md  comparison-tables.md  consistency.md  faq.md  limitations.md  performance-report-2-1-5.md
9-performance-reports/: 2-1-5-performance-report.md  2-1-5.md
_DEPRECATED-includes/: debian-based-install-from-source.md  install-driver-docs-header.md
_includes/: install-community-platform-warning.md  install-docs-header.md  install-driver-docs-footer.md  install-driver-docs-header.md  install-next-step.md  quickstart-footer.md  quickstart.md  troubleshootingcluster.md
_layouts/: documentation.html
_scripts/: dataexplorer.py  gen-index.rb  gen_python.py
api/: index.md
derive/: Cargo.toml
derive/src/: args.rs  command.rs  lib.rs
docs/: index.html
examples/: Cargo.toml  blocking.rs  changelog.rs  changes.rs  connection.rs  logging.rs  loop.rs  map.rs  minimal.rs  mkarray.rs  multi-document-insert.rs  parallel-insert.rs  server-status.rs  servers.rs
examples/blocking/: Cargo.toml
examples/changelog/: Cargo.toml
examples/map/: Cargo.toml  main.rs
examples/minimal/: Cargo.toml
examples/mobc/: simple.rs
examples/reql/: changes.rs  closing-changefeeds.rs  closing-spawned-feed.rs  minimal.rs
examples/server-status/: Cargo.toml
io/: Cargo.toml
io/src/: lib.rs
macros/: Cargo.toml
macros/examples/: changelog.rs  map.rs  server-status.rs
macros/src/: args.rs  func.rs  lib.rs  options.rs  parser.rs
macros/src/func/: mod.rs  tests.rs
mobc/: Cargo.toml  README.md
mobc/examples/: simple.rs
mobc/src/: lib.rs
reql/: Cargo.toml  README.md
reql-derive/: Cargo.toml
reql-io/: Cargo.toml
reql-io/src/: lib.rs
reql/examples/: minimal.rs
reql/src/: cmd.rs  err.rs  lib.rs  proto.rs
reql/src/cmd/: add.rs  and.rs  append.rs  args.rs  asc.rs  avg.rs  between.rs  binary.rs  bit_and.rs  bit_not.rs  bit_or.rs  bit_sal.rs  bit_sar.rs  bit_xor.rs  bracket.rs  branch.rs  ceil.rs  change_at.rs  changes.rs  circle.rs  close.rs  coerce_to.rs  connect.rs  connection.rs  contains.rs  count.rs  db.rs  db_create.rs  db_drop.rs  default.rs  delete.rs  delete_at.rs  desc.rs  difference.rs  distance.rs  distinct.rs  div.rs  do.rs  do_.rs  downcase.rs  (+89 more)
reql/tests/: changefeeds.rs  concurrency.rs  do.rs  expr.rs  index_create.rs  order_by.rs  table.rs
src/: args.rs  client.rs  cmd.rs  command.rs  commands.rs  conn.rs  err.rs  error.rs  errors.rs  lib.rs  macros.rs  oldlib.rs  opt.rs  pool.rs  prelude.rs  proto.rs  ql2.rs  qry.rs  ser.rs  serde_types.in.rs  session.rs  structs.rs  tests.rs  traits.rs  types.rs
tests/: connect.rs  data_handling.rs  driver.rs  expr.rs  integration.rs  table.rs  thread-safety.rs  zchangefeed.rs
types/: Cargo.toml
types/src/: date_time.rs  lib.rs
(+1496 files in other folders)
