[package]
name = "reql"
description = "A native ReQL driver"
version = "0.1.0-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb/rethinkdb-rs"
documentation = "https://docs.rs/reql"
readme = "README.md"
keywords = ["database", "rethinkdb", "rethinkdb", "reql", "driver"]
categories = ["database"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[badges]
travis-ci = { repository = "rethinkdb/rethinkdb-rs" }

[dependencies]
bytes = { version = "0.4.11", features = ["serde"] }
futures-preview = "0.3.0-alpha.12"
log = { version = "0.4.6", features = ["release_max_level_info"] }
reql-types = { version = "0.0.4", path = "./types" }
romio = "0.3.0-alpha.1"
scram = "0.4.0"
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.37"
slab = "0.4.2"

[dev-dependencies]
env_logger = "0.6.0"
crossbeam = "0.6.0"
