[package]
name = "reql"
description = "A native ReQL driver"
version = "0.1.0-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb/rethinkdb-rs"
documentation = "https://docs.rs/reql"
readme = "README.md"
keywords = ["database", "rethinkdb", "rethinkdb", "reql", "driver"]
categories = ["database"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
