[package]
name = "reql"
description = "A native ReQL driver"
version = "0.1.0-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb/rethinkdb-rs"
documentation = "https://docs.rs/reql"
readme = "README.md"
keywords = ["database", "rethinkdb", "rethinkdb", "reql", "driver"]
categories = ["database"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
ql2 = "2.0.2"
scram = "0.6.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["net", "io-util", "macros", "rt-multi-thread"] }
