[package]
name = "reql-derive"
description = "An implementation of the args macro used by the reql crate"
version = "0.0.8"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb-rs/reql"
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
syn = "0.11"
quote = "0.3"

[lib]
proc-macro = true
