[package]
name = "reql-derive"
description = "An implementation of the args macro used by the reql crate"
version = "0.0.8"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb-rs/reql"
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"

[dependencies.syn]
version = "0.14"
#features = ["full", "visit", "visit-mut", "extra-traits", "fold"]
features = ["full", "extra-traits"]

[lib]
proc-macro = true
