[package]
name = "reql-derive"
description = "An implementation of the args macro used by the reql crate"
version = "0.0.8"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb-rs/reql"
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.14"
features = ["full", "extra-traits"]

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]

[lib]
proc-macro = true
