[package]
name = "reql-examples"
version = "0.1.0"
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"
publish = false

[dependencies]
env_logger = "0.8.3"
futures = "0.3.14"
mobc-reql = { path = "../mobc" }
reql = { path = "../reql" }
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "sync"] }

[[example]]
name = "minimal"
path = "reql/minimal.rs"

[[example]]
name = "changes"
path = "reql/changes.rs"

[[example]]
name = "closing-changefeeds"
path = "reql/closing-changefeeds.rs"

[[example]]
name = "simple"
path = "mobc/simple.rs"
