[package]
name = "reql-examples"
version = "0.1.0"
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"
publish = false

[dependencies]
env_logger = "0.9.0"
futures = "0.3.17"
futures-timer = "3.0.2"
log = "0.4.14"
mobc-reql = { path = "../mobc" }
reql = { path = "../reql" }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread", "sync"] }

[[example]]
name = "minimal"
path = "reql/minimal.rs"

[[example]]
name = "changes"
path = "reql/changes.rs"

[[example]]
name = "closing-changefeeds"
path = "reql/closing-changefeeds.rs"

[[example]]
name = "closing-spawned-feed"
path = "reql/closing-spawned-feed.rs"

[[example]]
name = "simple"
path = "mobc/simple.rs"
