[package]
name = "reql-io"
description = "ReQL IO implementation"
version = "0.2.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-rethinkdb/reql"
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
serde = "0.9"
r2d2 = "0.7"
byteorder = "1.0"
scram = "0.1"
tokio-core = "0.1"
futures = "0.1"
rand = "0.3"
