[package]
name = "reql-macros"
description = "Macros for the reql crate"
version = "0.0.10"
license = "MIT/Apache-2.0"
repository = "https://github.com/RebirthDB/rebirthdb-rs"
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
quote = "0.6"

[dependencies.syn]
version = "0.14"
features = ["full", "extra-traits"]

[dependencies.proc-macro2]
version = "0.4"
features = ["nightly"]

[lib]
proc-macro = true
