[package]
name = "mobc-reql"
description = "RethinkDB support for the mobc connection pool"
version = "0.6.2"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb/rethinkdb-rs/tree/main/mobc"
documentation = "https://docs.rs/mobc-reql"
readme = "README.md"
keywords = ["async", "database", "pool", "reql"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[features]
default = ["tokio"]
tokio = ["mobc/tokio"]
async-std = ["mobc/async-std"]

[dependencies]
blocking = "1.0.2"
futures = "0.3.17"
futures-timer = { version = "3.0.2", default-features = false }
mobc = { version = "0.7.3", default-features = false }
reql = { version = "^0.10.4-alpha.0", path = "../reql" }
tracing = "0.1.29"
