[package]
name = "reql-io"
description = "ReQL IO implementation"
version = "0.0.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-rethinkdb/reql"
authors = ["rushmorem <rushmore@webenchanter.com>"]

[dependencies]
reql = "0.0.6-alpha1"
r2d2 = "0.7"
ql2 = "1.1"
byteorder = "1.0"
scram = "0.1"
tokio-core = "0.1"
futures = "0.1"
