[package]
name = "reql"
description = "A native ReQL driver"
version = "0.10.4-alpha.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/rethinkdb/rethinkdb-rs"
documentation = "https://docs.rs/reql"
readme = "README.md"
keywords = ["async", "database", "rethinkdb", "reql", "driver"]
categories = ["database"]
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
async-net = "1.6.1"
async-stream = "0.3.2"
dashmap = "4.0.2"
futures = "0.3.17"
ql2 = "2.1.1"
reql-macros = { version = "0.3.0", path = "../macros" }
reql-types = { version = "0.2.0", path = "../types" }
scram = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1.29"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.1"

[features]
