[package]
name = "reql-types"
description = "Some useful types to use along with the reql crate"
version = "0.2.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/RethinkDB/rethinkdb-rs"
documentation = "https://docs.rs/reql-types"
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
base64 = "0.13.0"
