[package]
name = "reql-types"
description = "Some useful types to use along with the reql crate"
version = "0.3.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/RethinkDB/rethinkdb-rs"
documentation = "https://docs.rs/reql-types"
authors = ["rushmorem <rushmore@webenchanter.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
base64 = "0.13.0"
time = { version = "0.3.9", features = ["macros", "formatting", "parsing"] }

[features]
