[package]
name = "changelog"
version = "0.1.0"
authors = ["rushmorem <rushmore@webenchanter.com>"]
publish = false

[[bin]]
name = "changelog"
path = "main.rs"

[dependencies]
reql = { path = "../.." }
reql-types = { path = "../../types" }
reql-macros = { path = "../../macros" }
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
