[package]
name = "map"
version = "0.1.0"
authors = ["rushmorem <rushmore@webenchanter.com>"]
publish = false

[[bin]]
name = "map"
path = "main.rs"

[dependencies]
reql = { path = "../.." }
reql-types = { path = "../../types" }
reql-macros = { path = "../../macros" }
futures = "0.1"
slog = "2.0"
slog-term = "2.0"
serde_json = "1.0"
